tests/ui/spirv-attr/int-without-flat.stderr
error: `Fragment` entry-point `Input` parameter must be decorated with `#[spirv(flat)]`
 --> $DIR/int-without-flat.rs:6:22
  |
6 | pub fn fragment(int: u32, double: f64) {}
  |                      ^^^

error: `Fragment` entry-point `Input` parameter must be decorated with `#[spirv(flat)]`
 --> $DIR/int-without-flat.rs:6:35
  |
6 | pub fn fragment(int: u32, double: f64) {}
  |                                   ^^^

error: aborting due to 2 previous errors

